Minimal demo 最小演示

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,12 @@
 [project]
 name = "llm-cli"
 version = "0.1.0"
-description = "一个 LLM 的命令行界面。"
+description = "A CLI for LLMs."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "platformdirs>=4.3.7",
+    "pydantic>=2.11.3",
+    "pydantic-ai>=0.0.46",
+    "typer>=0.15.2",
+]
