Use Click instead of Typer. 使用 Click 代替 Typer。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = "A CLI for LLMs."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "click>=8.1.8",
     "platformdirs>=4.3.7",
     "prompt-toolkit>=3.0.51",
     "pydantic>=2.11.3",
     "pydantic-ai>=0.0.46",
     "rich>=14.0.0",
-    "typer>=0.15.2",
 ]
 
 [project.scripts]
