--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.11.3",
     "pydantic-ai>=0.0.46",
     "rich>=14.0.0",
+    "tomli ; python_full_version < '3.11'",
 ]
 
 [project.scripts]
