--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,9 @@ dependencies = [
 
 [project.scripts]
 llm-cli = "llm_cli:cli"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["README.md", "licenses/*"]
