--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,9 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "*" = ["README.md", "licenses/*"]
+
+[dependency-groups]
+dev = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.14",
+]
